@startuml
'https://plantuml.com/class-diagram

class MainWindow {
    - Ui::MainWindow * ui

    + MainWindow(QWidget *)
    + ~MainWindow() override

    - void displayHelloText()
    - void on_theoryButton_clicked()
    - void on_demoButton_clicked()
    - void on_testingButton_clicked()
}

class TestingSystem {
	- Ui::TestingSystem * ui
	- WelcomeToTesting * welcomeToTestingWidget
	- TestingWidget * testingWidget
	- SessionStatWidget * statWidget
	- std::shared_ptr<SessionStat> currentSessionStat
    - HtmlViewer * viewer

	+ TestingSystem(QWidget *)
	+ ~TestingSystem() override

    - void showRef(const QString & refSectionName)

	- void on_openSettingsMenu_triggered()
	- void on_statMenu_triggered()
	- void startTest(const QString & username)
	- void saveStat()
	- void showStat()
	- void showTestingRules()
    - void showEditQuestionsRules()
}
MainWindow <-- TestingSystem

class QuestionWidget {
	- Ui::QuestionWidget * ui
	- QTextBrowser * questionTextBrowser
	- shared_ptr<Question> question
	- vector<QCheckBox *> answersCheckBoxes
	- void formAnswers()

	+ QuestionWidget(shared_ptr<Question>, QWidget *, QTextBrowser *)
	+ ~QuestionWidget() override
	+ void Display()
	+ int RateAnswer()
	+ shared_ptr<Question> GetQuestion()
}
TestingWidget "1" *-- "..." QuestionWidget

enum Complexity {
    simple
    medium
    hard
}
class Question {
	- QString question
	- Complexity complexity
	- vector<QString> answers
	- set<int> correctAnswers

	+ Question()
	+ Question(QString, std::vector<QString>, std::set<int>, Complexity)
	+ Question(QJsonObject)
	+ int RateAnswer(std::set<int>) const noexcept
	+ QString GetQuestion() const noexcept
	+ vector<QString> GetAnswers() const noexcept
	+ Complexity GetComplexity() const noexcept
}
Question +-up- Complexity
QuestionWidget *-- Question

class SessionStatWidget {
    - Ui::SessionStatWidget * ui

	+ SessionStatWidget(shared_ptr<SessionStat>, QWidget *)
	+ ~SessionStatWidget() override

	- void closeEvent(QCloseEvent *) override
	- void closed()
}
TestingSystem *-left- SessionStatWidget

class StatDatabaseViewWidget {
	- Ui::StatDatabaseViewWidget * ui
	- QSqlDatabase * db
	- QSqlTableModel * model
	- std::list<std::unique_ptr<StatDatabaseViewOption>> filterOptions

	+ StatDatabaseViewWidget(QString, QWidget *)
	+ ~StatDatabaseViewWidget() override

	- void addFilterOptions()

	- void on_showButton_clicked()
	- void on_clearFilterButton_clicked()
	- void changeParametersFields(QString)
}
TestingSystem <-- StatDatabaseViewWidget

class StatError {
    + StatError(std::string)
}
Error <|-right- StatError
SessionStat +-- StatError

class SessionStat {
	- QString username
	- QDateTime startTime
	- QDateTime finishTime
	- std::vector<std::pair<std::shared_ptr<Question>, int>> questionsRate

	+ SessionStat(QString)
	+ void AddQuestionRate(std::shared_ptr<Question>, int) noexcept
	+ void Save(QString)
	+ QString ToHtmlString() const
	+ void SetStartTime(QDateTime)
	+ void SetFinishTime(QDateTime)

	- static QTime duration(QDateTime, QDateTime) noexcept
	- int calculateUserRate() const noexcept
	- int calculateMaxRate() const noexcept
}
TestingSystem *-- SessionStat

class WelcomeToTesting {
	- Ui::WelcomeToTesting * ui

	+ WelcomeToTesting(QWidget *)
	+ ~WelcomeToTesting() override

	- void closeEvent(QCloseEvent *) override
	- void closed(QString username)
	- void testingRulesButtonClicked()
	- void on_startTestingButton_clicked()
	- void on_usernameLineEdit_textChanged()
	- void on_showTestingRulesButton_clicked()
}
TestingSystem *-left- WelcomeToTesting

class TestingWidget {
	- Ui::TestingWidget * ui
	- int currentQuestion
	- int amountOfQuestions
	- std::vector<std::shared_ptr<QuestionWidget>> questions
	- std::shared_ptr<SessionStat> currentSessionStat

    + TestingWidget(std::shared_ptr<SessionStat>, QWidget *)
    + ~TestingWidget() override

	- void readQuestions()
	- void displayCurrentQuestion()
	- void closeEvent(QCloseEvent *) override

	- void closed()

	- void on_answerButton_clicked()
}
TestingSystem *-- TestingWidget

class StatDatabaseViewOption {
    - const std::vector<QWidget *> fields
    - const QString optionName

    + StatDatabaseViewOption(const QString & optionName, std::vector<QWidget *> & fields)
    + virtual ~StatDatabaseViewOption() = 0

    + void SetFieldsVisibility(bool visible)
    + QString GetName() const noexcept
}
StatDatabaseViewWidget "1" *-- "..." StatDatabaseViewOption

class UsernameOption {
    + UsernameOption(std::vector<QWidget *> & fields)
    + ~UsernameOption() final
}
StatDatabaseViewOption <|-- UsernameOption

class TestingPeriodOption {
    + TestingPeriodOption(std::vector<QWidget *> & fields)
    + ~TestingPeriodOption() final
}
StatDatabaseViewOption <|-- TestingPeriodOption

class TestingDurationOption {
    + TestingDurationOption(std::vector<QWidget *> & fields)
    + ~TestingDurationOption() final
}
StatDatabaseViewOption <|-- TestingDurationOption

class CompletionPercentage {
    + CompletionPercentage(std::vector<QWidget *> & fields)
    + ~CompletionPercentage() final
}
StatDatabaseViewOption <|-- CompletionPercentage

class Error {
    # std::string what

    + Error()
    + Error(const std::string & what
    + std::string What()
    + void Show()
}

@enduml